fix z-index SearchForm

--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -4,6 +4,7 @@
   font-weight: normal;
   padding-top: 60px;
   padding-bottom: 10px;
+  z-index: -1;
 }
 
 @media screen and (max-width: 768px) {
